# pa-lab

./: .clang-format  .gitignore  LICENSE  README.md
.github/: CODEOWNERS
.github/workflows/: CODEOWNERS  ci_algorithms.yml  ci_build.yml  ci_test.yml  ci_tutorials.yml  demo_comple_all.yml  greetings.yml  skel_compile_all.yml  sol_run_all.yml  tutorial_comple_all.yml
algorithms/: check
algorithms/lab01/: check
algorithms/lab02/: check
algorithms/lab03/: README.md  applications.ipynb
algorithms/lab04/: check
algorithms/lab04/rust/: Cargo.toml
algorithms/lab04/rust/01-permutari/: 01-permutari_general.rs  01-permutari_pruning.rs  01-permutari_reference.rs
algorithms/lab04/rust/02-combinari/: 02-combinari.rs
algorithms/lab04/rust/03-soricel/: 03-soricel.rs
algorithms/lab05/: README.md
algorithms/lab06/: check
algorithms/lab07/: check
algorithms/lab08/: check
algorithms/lab09/: check
algorithms/lab10/: check
algorithms/lab11/: check
demo/: README.md
docs/: complexity.md
skel/: README.md
skel/lab00/: README.md  hello  hello.cpp  reference  reference.cpp  struct  struct.cpp
skel/lab01/: check
skel/lab02/: check
skel/lab03/: check
skel/lab05/: a.cpp  check  comb..cpp  out  permutari.cpp
skel/lab06/: README.md  check
skel/lab07/: check
tutorial/: setup.md
utils/: Makefile  base_check.sh  build_and_test_algorithms.sh  build_skeletons.sh  default_checker.sh  demo_compile_all.sh  lint_all.sh  run_solutions.sh  skel_compile_all.sh  skel_export.sh  sol_diff.sh  sol_export.sh  sol_run.sh  sol_run_all.sh  tutorial_compile_all.sh
(+890 files in other folders)
